# verdandi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
doc/: widgets.md
src/: log-config.json  main.py
src/component/: curve.py  icon.py  pill.py  text.py
src/metric/: weather.py
src/provider/: openmeteo.py
src/scripts/: __init__.py  check_icons_palette.py  docgen.py
src/static/samples/: open-meteo.json
src/util/: common.py  draw.py
src/verdandi/: app.py  configuration.py  middlewares.py  state.py
src/verdandi/component/: curve.py  gauge.py  icon.py  progress.py  text.py
src/verdandi/metric/: abs_metric.py  ics.py  velib.py  weather.py
src/verdandi/tests/: conftest.py  test_app_canvas.py  test_canvas.py  test_metric_ics.py  test_metric_velib.py  test_metric_weather.py  test_util_cache.py  test_util_text.py
src/verdandi/tests/fixtures/: open-meteo.json  test-config.yaml
src/verdandi/tests/fixtures/ics/: french-holidays.ics  (+1 more)
src/verdandi/util/: cache.py  color.py  common.py  date.py  draw.py  image.py  logging.py  text.py
src/verdandi/widget/: __init__.py  abs_widget.py  calendar.py  countdown.py  debug_icons.py  schedule.py  showcase.py  velib.py  weather.py
src/widget/: __init__.py  weather.py
verdandi/: configuration.py  main.py
verdandi/component/: curve.py  icon.py  pill.py  progress.py  text.py
verdandi/metric/: abs_metric.py  weather.py
verdandi/provider/: openmeteo.py
verdandi/util/: cache.py  date.py  logging.py
verdandi/widget/: __init__.py  abs_widget.py  countdown.py  weather.py
(+2 files in other folders)
