[project]
name = "verdandi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "fastapi[standard]>=0.116.1",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]
