[project]
name = "verdandi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.8",
    "icalevents>=0.2.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[project.scripts]
docgen = "scripts.docgen:run"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "anyio>=4.9.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "time-machine>=2.16.0",
    "ty>=0.0.1a15",
]

[tool.uv]
package = true
default-groups = []
